<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="type">
        <item>Type</item>
        <item>Indoor</item>
        <item>Outdoor</item>
    </string-array>

    <string-array name="travel">
        <item>Travel</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="money">
        <item>Money</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

</resources>