...
                android:layout_marginLeft="100dp"
                android:layout_toRightOf="@+id/Start_time"
                android:textSize="18sp"
                android:text="End time:"/>

            <ImageButton
                android:id="@+id/schedule_finish"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#00000000"
                android:scaleType="centerInside"
                android:src="@drawable/button"
                android:layout_below="@+id/End_time_spinner"
...
